--- a/debian/control
+++ b/debian/control
@@ -3,14 +3,14 @@ Section: misc
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Michael Meskes <meskes@debian.org>
-Build-Depends: debhelper (>= 5), autotools-dev, kdelibs4-dev, docbook-xml (>= 4.2), xsltproc, docbook-xsl, kdebase-bin, libqscintilla-dev, texinfo, dpatch
-Standards-Version: 3.7.3
+Build-Depends: debhelper (>= 5), kdelibs5-dev, kdebase-bin, dpatch, libqscintilla2-dev, cdbs
+Standards-Version: 3.8.0
 
 Package: tora
 Architecture: any
-Depends: libqt3-mt-psql|libqt3-mt-odbc|libqt3-mt-mysql, ${shlibs:Depends}
+Depends: libqt4-sql, ${shlibs:Depends}, ${misc:Depends}
 Description: A graphical toolkit for database developers and administrators
  Tora features a schema browser, SQL worksheet, PL/SQL editor & debugger,
  storage manager, rollback segment monitor, instance manager, and SQL output
- viewer. Via qt3 it can access PostgreSQL and MySQL directly. Any other
+ viewer. Via qt4 it can access PostgreSQL and MySQL directly. Any other
  database systems can be accessed via ODBC.
