--- a/debian/control
+++ b/debian/control
@@ -17,3 +17,15 @@ Description: A graphical toolkit for database developers and administrators
  storage manager, rollback segment monitor, instance manager, and SQL output
  viewer. Via qt4 it can access PostgreSQL and MySQL directly. Any other
  database systems can be accessed via ODBC.
+
+Package: tora-dbg
+Section: debug
+Architecture: any
+Depends: ${misc:Depends}, tora
+Description: A graphical toolkit for database developers and administrators
+ Tora features a schema browser, SQL worksheet, PL/SQL editor & debugger,
+ storage manager, rollback segment monitor, instance manager, and SQL output
+ viewer. Via qt4 it can access PostgreSQL and MySQL directly. Any other
+ database systems can be accessed via ODBC.
+ .
+ This package provides the debugging symbols for tora.
