--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Package: tora-dbg
 Section: debug
 Architecture: any
 Depends: ${misc:Depends}, tora
-Description: A graphical toolkit for database developers and administrators
+Description: A graphical toolkit for database developers and administrators - debugging symbols
  Tora features a schema browser, SQL worksheet, PL/SQL editor & debugger,
  storage manager, rollback segment monitor, instance manager, and SQL output
  viewer. Via qt4 it can access PostgreSQL and MySQL directly. Any other
