--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-extras/tora.git
 Package: tora
 Architecture: any
 Depends: libqt4-sql, ${shlibs:Depends}, ${misc:Depends}
-Description: A graphical toolkit for database developers and administrators
+Description: graphical toolkit for database developers and administrators
  Tora features a schema browser, SQL worksheet, PL/SQL editor & debugger,
  storage manager, rollback segment monitor, instance manager, and SQL output
  viewer. Via qt4 it can access PostgreSQL and MySQL directly. Any other
@@ -22,7 +22,7 @@ Package: tora-dbg
 Section: debug
 Architecture: any
 Depends: ${misc:Depends}, tora
-Description: A graphical toolkit for database developers and administrators - debugging symbols
+Description: graphical toolkit for database developers and administrators - debugging symbols
  Tora features a schema browser, SQL worksheet, PL/SQL editor & debugger,
  storage manager, rollback segment monitor, instance manager, and SQL output
  viewer. Via qt4 it can access PostgreSQL and MySQL directly. Any other
